@@ -7,8 +7,11 @@ package ch.randelshofer.fastdoubleparser;
 
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
+import org.openjdk.jmh.annotations.Fork;
+import org.openjdk.jmh.annotations.Measurement;
 import org.openjdk.jmh.annotations.Mode;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
+import org.openjdk.jmh.annotations.Warmup;
 
 import java.util.concurrent.TimeUnit;
 
@@ -16,109 +19,96 @@ import java.util.concurrent.TimeUnit;
  * Benchmarks for selected floating point strings.
  * <pre>
  * # JMH version: 1.28
- * # VM version: JDK 17, OpenJDK 64-Bit Server VM, 17+35-2724
+ * # VM version: JDK 17.0.1, OpenJDK 64-Bit Server VM, 17.0.1+12-jvmci-21.3-b05
  * # Intel(R) Core(TM) i7-8700B CPU @ 3.20GHz
  *
- * Benchmark                       Mode  Cnt   Score   Error  Units
- * FromZero                        avgt   25   3.362 ± 0.130  ns/op
- * FromOnePointZero                avgt   25  12.784 ± 0.250  ns/op
- * From3Digits                     avgt   25  11.910 ± 0.292  ns/op
- * From3DigitsWithDecimalPoint     avgt   25  13.544 ± 0.308  ns/op
- * From17DigitsWith3DigitExp       avgt   25  34.346 ± 0.436  ns/op
- * From19DigitsWith3DigitExp       avgt   25  35.628 ± 0.441  ns/op
- * From19DigitsWithoutExp          avgt   25  29.889 ± 0.451  ns/op
- * FromNegative18DigitsWithoutExp  avgt   25  27.912 ± 0.088  ns/op
- * From14HexDigitsWith3DigitExp    avgt   25  25.812 ± 0.511  ns/op
- * </pre>
- * <pre>
- * # JMH version: 1.28
- * # VM version: JDK 1.8.0_261, Java HotSpot(TM) 64-Bit Server VM, 25.261-b12
- * # Intel(R) Core(TM) i7-8700B CPU @ 3.20GHz
+ * Current version with SWAR:
  *
  * Benchmark                       Mode  Cnt   Score   Error  Units
- * FromZero                        avgt   25   3.687 ± 0.019  ns/op
- * FromOnePointZero                avgt   25  14.691 ± 0.279  ns/op
- * From3Digits                     avgt   25  13.264 ± 0.069  ns/op
- * From3DigitsWithDecimalPoint     avgt   25  14.557 ± 0.156  ns/op
- * From17DigitsWith3DigitExp       avgt   25  41.830 ± 0.097  ns/op
- * From19DigitsWith3DigitExp       avgt   25  42.775 ± 0.881  ns/op
- * From19DigitsWithoutExp          avgt   25  34.215 ± 1.184  ns/op
- * FromNegative18DigitsWithoutExp  avgt   25  33.949 ± 0.078  ns/op
- * From14HexDigitsWith3DigitExp    avgt   25  36.575 ± 0.412  ns/op
+ * From17DigitsWith3DigitExp       avgt   25  46.076 ± 1.663  ns/op (regression)
+ * From19DigitsWithoutExp          avgt   25  30.204 ± 0.668  ns/op
+ * From19DigitsWith3DigitExp       avgt   25  38.357 ± 0.410  ns/op (regression)
+ * FromNegative18DigitsWithoutExp  avgt   25  26.533 ± 0.470  ns/op
+ * From14HexDigitsWith3DigitExp    avgt   25  26.959 ± 1.069  ns/op
+ *
+ * Previous version without SWAR:
+ *
+ * Benchmark                       Mode  Cnt   Score   Error  Units
+ * FromZero                        avgt    4   2.067 ± 0.130  ns/op
+ * FromOnePointZero                avgt    4   2.304 ± 0.030  ns/op
+ * From3Digits                     avgt    4   2.291 ± 0.093  ns/op
+ * From3DigitsWithDecimalPoint     avgt    4   2.285 ± 0.031  ns/op
+ * From17DigitsWith3DigitExp       avgt    4  32.242 ± 0.728  ns/op
+ * From19DigitsWithoutExp          avgt    4  30.658 ± 0.366  ns/op
+ * From19DigitsWith3DigitExp       avgt    4  34.448 ± 0.801  ns/op
+ * FromNegative18DigitsWithoutExp  avgt    4  29.039 ± 1.615  ns/op
+ * From14HexDigitsWith3DigitExp    avgt    4  25.044 ± 0.687  ns/op
  * </pre>
  */
+@Fork(value = 5, jvmArgsAppend = {"-XX:+UnlockExperimentalVMOptions", "--add-modules", "jdk.incubator.vector"
+        //       ,"-XX:+UnlockDiagnosticVMOptions", "-XX:PrintAssemblyOptions=intel", "-XX:CompileCommand=print,ch/randelshofer/fastdoubleparser/FastDoubleParser.*"
+
+})
+@Measurement(iterations = 5)
+@Warmup(iterations = 3)
+@OutputTimeUnit(TimeUnit.NANOSECONDS)
+@BenchmarkMode(Mode.AverageTime)
 public class FastDoubleParserJmhBenchmark {
-    @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFrom14HexDigitsWith3DigitExp() {
-        String str = "0x123.456789abcdep123";
-        return FastDoubleParser.parseDouble(str);
-    }
+    /*
+            @Benchmark
+            public double m01FromZero() {
+                String str = "0";
+                return FastDoubleParser.parseDouble((CharSequence)str);
+            }
 
+            @Benchmark
+            public double m02FromOnePointZero() {
+                String str = "1.0";
+                return FastDoubleParser.parseDouble((CharSequence)str);
+            }
+
+            @Benchmark
+            public double m03From3Digits() {
+                String str = "365";
+                return FastDoubleParser.parseDouble((CharSequence)str);
+            }
+
+            @Benchmark
+            public double m04From3DigitsWithDecimalPoint() {
+                String str = "10.1";
+                return FastDoubleParser.parseDouble((CharSequence)str);
+            }
+    */
     @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFrom17DigitsWith3DigitExp() {
+    public double m05From17DigitsWith3DigitExp() {
         String str = "123.45678901234567e123";
-        return FastDoubleParser.parseDouble(str);
+        return FastDoubleParser.parseDouble((CharSequence) str);
     }
 
     @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFrom19DigitsWith3DigitExp() {
-        String str = "123.4567890123456789e123";
-        return FastDoubleParser.parseDouble(str);
-    }
-
-    @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFrom19DigitsWithoutExp() {
+    public double m06From19DigitsWithoutExp() {
         String str = "123.4567890123456789";
-        return FastDoubleParser.parseDouble(str);
+        return FastDoubleParser.parseDouble((CharSequence) str);
     }
 
     @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFrom3Digits() {
-        String str = "365";
-        return FastDoubleParser.parseDouble(str);
+    public double m07From19DigitsWith3DigitExp() {
+        String str = "123.4567890123456789e123";
+        return FastDoubleParser.parseDouble((CharSequence) str);
     }
 
     @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFrom3DigitsWithDecimalPoint() {
-        String str = "10.1";
-        return FastDoubleParser.parseDouble(str);
-    }
-
-    @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFromNegative18DigitsWithoutExp() {
+    public double m08FromNegative18DigitsWithoutExp() {
         String str = "-0.29235596393453456";
-        return FastDoubleParser.parseDouble(str);
+        return FastDoubleParser.parseDouble((CharSequence) str);
     }
 
     @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFromOnePointZero() {
-        String str = "1.0";
-        return FastDoubleParser.parseDouble(str);
-    }
+    public double m09From14HexDigitsWith3DigitExp() {
+        String str = "0x123.456789abcdep123";
+        return FastDoubleParser.parseDouble((CharSequence) str);
+   }
 
-    @Benchmark
-    @OutputTimeUnit(TimeUnit.NANOSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public double measureFromZero() {
-        String str = "0";
-        return FastDoubleParser.parseDouble(str);
-    }
 }
 
 
